Adding researchers' fit statistics for creating comparison tables.

--- a/recs-regressions/RECSRegressions.ipynb
+++ b/recs-regressions/RECSRegressions.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_energy_consumption_md = False"
+    "write_energy_consumption_md = True"
    ]
   },
   {
@@ -458,6 +458,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4dce0b0e-24cd-4e78-9ad0-cfb24c7d2768",
+   "metadata": {},
+   "source": [
+    "# Published Coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56171ae2-1b50-411f-b0f6-b8664ba80bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "published_fits = pd.read_csv(\n",
+    "    \"./CarbonFootprintCoefficients.csv\",\n",
+    "    index_col=[\"HeatingSystem\", \"Coefficients\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2466518-519f-4eb8-9d9b-b0a25dc56ee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "published_fits.index.unique(\"HeatingSystem\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "376931f8-b21f-4ecc-8af0-e967491c64fb",
    "metadata": {},
    "source": [
@@ -533,37 +564,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862d54e8-603e-4dce-8e9b-e00d77031d5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This for ease of copying to a spreadsheet\n",
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e5d9271d-a6d4-4f15-b45b-b5f596feda3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"elmisc\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-elmisc.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -650,36 +674,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b52ba34-620d-466f-89e2-668af98fcfc3",
+   "id": "81f6f0a5-ef50-4e31-8ada-361a290ad37e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43cd783c-8e88-4594-9440-4aef4292d68c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"elsph\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-elsph.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -758,38 +777,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699dfe63-f963-41d2-af87-032c0fe5ec84",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2404f20-f480-4ad1-ad9e-1bb43fc1270f",
+   "id": "3e64ec74-c267-404c-800d-d33c0e82ac66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"elcol\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-elcol.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -894,21 +906,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc347edf-461c-4517-b6a7-bda04cf3deb8",
+   "id": "8fe13e25-c533-4028-9a72-cf653288c7b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"elwth\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-elwth.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -998,36 +1020,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3eaa00-e4ca-424e-ae22-ec2251a2d626",
+   "id": "93313247-98fc-4ba7-80b7-7086f39cc859",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85bbb8e7-4e22-4f09-8e77-bbe85ceca61e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"ngsph\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-ngsph.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -1125,36 +1142,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890319cf-37d0-4afa-9d5f-6fa63ce394c4",
+   "id": "3050437a-bc7e-4323-8648-5026fff65c10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3978cea2-d0b2-44e7-a93f-40cd0e59db95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"ngwth\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-ngwth.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -1219,36 +1231,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae41d425-b6b6-47ff-b9e4-ffa751a25188",
+   "id": "84b1d14a-e36a-46bf-9a79-6b2c825fa870",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c1b2012-d3de-4eb5-bc7e-0b2ebfe004de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"fosph\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-fosph.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -1342,38 +1349,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "054c66dd-0fa9-4820-9b67-818b17c62e44",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a90cd80-c916-4250-86d0-b49ce127f19d",
+   "id": "ed4f53b1-7686-49e1-9d8d-14cee00c6147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"fowth\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-ngwth.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -1471,36 +1471,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128709ca-7ac9-4b9e-9baa-82da11587b6b",
+   "id": "c7fb66ee-1445-47a8-bc4a-caddc2eec6fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params, \n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues,\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67a38647-3257-4227-9844-a0a19e8f55db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"lpsph\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-lpsph.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
@@ -1593,36 +1588,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e342e4b-6c3d-46bd-a0ea-322ae0f50f7d",
+   "id": "28a729be-3447-428f-aad4-bf6d8d13c7ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee934bea-1707-4cdb-a0aa-6eb3fcd39dac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if write_energy_consumption_md:\n",
-    "    pd.DataFrame({\n",
+    "published_fit = published_fits.loc[\"lpwth\"]\n",
+    "rescomp = pd.DataFrame({\n",
     "        \"Estimate\": model.params,\n",
     "        \"Std. Error\": model.bse,\n",
     "        \"t value\": model.tvalues,\n",
-    "        \"P(>|t|)\": model.pvalues\n",
-    "    }).rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
-    "        \"./EnergyConsumptionRegressions-lpwth.md\",\n",
+    "        \"P(>|t|)\": model.pvalues,\n",
+    "        \"Published Estimate\": published_fit.Estimate,\n",
+    "        \"Difference From Published\": model.params - published_fit.Estimate,\n",
+    "        \"Lower Std. Error\": (model.bse <= published_fit[\"Std. Error\"]),\n",
+    "        \"Larger t value\": (model.bse >= published_fit[\"t value\"]),\n",
+    "        \"Same Sign\": ((model.params * published_fit.Estimate) > 0.0)\n",
+    "})\n",
+    "\n",
+    "if write_energy_consumption_md:\n",
+    "    rescomp.rename_axis([\"Coefficients\"], axis=\"index\").to_markdown(\n",
+    "        \"./EnergyConsumptionRegressions.md\",\n",
     "        \"a\",\n",
     "        index=True\n",
-    "    )"
+    "    )\n",
+    "else:\n",
+    "    rescomp.style"
    ]
   },
   {
