Making sure that, when the user decides not to write the comparisons to file, that they are instead printed as cell output.

--- a/recs-regressions/RECSRegressions.ipynb
+++ b/recs-regressions/RECSRegressions.ipynb
@@ -75,6 +75,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b34ac993-b66f-44a3-9bd4-b96196c2d7cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e9756835-60ff-47b3-97e6-327fc4ffca66",
    "metadata": {},
@@ -120,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_energy_consumption_md = True"
+    "write_energy_consumption_md = False"
    ]
   },
   {
@@ -587,7 +597,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -698,7 +708,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -801,7 +811,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -891,21 +901,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ea49db-5589-40ee-b662-187e16e4eb30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame({\n",
-    "    \"Estimate\": model.params,\n",
-    "    \"Std. Error\": model.bse,\n",
-    "    \"t value\": model.tvalues,\n",
-    "    \"P(>|t|)\": model.pvalues\n",
-    "}).style"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8fe13e25-c533-4028-9a72-cf653288c7b2",
    "metadata": {},
    "outputs": [],
@@ -930,7 +925,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -1044,7 +1039,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -1166,7 +1161,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -1255,7 +1250,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -1373,7 +1368,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -1495,7 +1490,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
@@ -1612,7 +1607,7 @@
     "        index=True\n",
     "    )\n",
     "else:\n",
-    "    rescomp.style"
+    "    display(rescomp.style)"
    ]
   },
   {
