Adding notebook for reinforcement learning with gymnasium.  Adding small changes to notebooks for machine learning with scikit-learn and unsupervised learning.

--- a/notebooks/python/MachineLearningWithScikitLearn.ipynb
+++ b/notebooks/python/MachineLearningWithScikitLearn.ipynb
@@ -1289,7 +1289,7 @@
    "source": [
     "# Imputation with scikit-learn\n",
     "from sklearn.impute import SimpleImputer\n",
-    "X_cat music_df[\"genre\"].values.reshape(-1, 1)\n",
+    "X_cat = music_df[\"genre\"].values.reshape(-1, 1)\n",
     "X_num = music_df.drop([\"genre\", \"popularity\"], axis=1).values\n",
     "y=music_df[\"popularity\"].values\n",
     "\n",
