--- a/notebooks/python/ImageProcessing.ipynb
+++ b/notebooks/python/ImageProcessing.ipynb
@@ -623,9 +623,9 @@
     "#Using total variation filter denoising\n",
     "from skimage.restoration import denoise_tv_chambolle\n",
     "# Apply total variation filter denoising\n",
-    "denoised_image = denoise_tv_chambolle(noisy_image,\n",
-    "weight=0.1,\n",
-    "multichannel=True)\n",
+    "denoised_image = denoise_tv_chambolle(\n",
+    "    noisy_image, weight=0.1, multichannel=True\n",
+    ")\n",
     "# Show denoised image\n",
     "show_image(noisy_image, 'Noisy image')\n",
     "show_image(denoised_image, 'Denoised image')"
@@ -818,10 +818,7 @@
    "source": [
     "## Right around the corner\n",
     "* Corner detection\n",
-    "* Points of interest\n",
-    "* Corners\n",
-    "* Matching corners\n",
-    "* Harris corner detector"
+    "* Points of interest are invariant under rotation."
    ]
   },
   {
@@ -844,12 +841,12 @@
     "# Finds the coordinates of the corners\n",
     "coords = corner_peaks(corner_harris(image), min_distance=5)\n",
     "print(\"A total of\", len(coords), \"corners were detected.\")\n",
-    "A total of 122 corners were found from measure response image.\n",
+    "# A total of 122 corners were found from measure response image.\n",
     "\n",
     "# Corners detected\n",
     "# Show image with marks in detected corners\n",
-    "show_image_with_detected_corners(image, coords)\n",
-    "\n",
+    "show_image_with_corners(image, coords)\n",
+    "show_image_with_detected_corners\n",
     "# Show image with contours\n",
     "def show_image_with_corners(image, coords, title=\"Corners detected\"):\n",
     "    plt.imshow(image, interpolation='nearest', cmap='gray')\n",
@@ -891,11 +888,10 @@
     "\n",
     "# Detecting faces\n",
     "# Apply detector on the image\n",
-    "detected = detector.detect_multi_scale(img=image,\n",
-    "scale_factor=1.2,\n",
-    "step_ratio=1,\n",
-    "min_size=(10, 10),\n",
-    "max_size=(200, 200))\n",
+    "detected = detector.detect_multi_scale(\n",
+    "    img=image, scale_factor=1.2, step_ratio=1,\n",
+    "    min_size=(10, 10), max_size=(200, 200)\n",
+    ")\n",
     "\n",
     "# Detected faces\n",
     "print(detected)\n",
@@ -910,9 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGE PROCESSING IN PYTHON\n",
-    "\n",
-    "Show detected faces\n",
+    "# Show detected faces\n",
     "def show_detected_face(result, detected, title=\"Face image\"):\n",
     "    plt.imshow(result)\n",
     "    img_desc = plt.gca()\n",
@@ -922,10 +916,13 @@
     "    for patch in detected:\n",
     "        img_desc.add_patch(\n",
     "            patches.Rectangle(\n",
-    "            (patch['c'], patch['r']),\n",
-    "            patch['width'],\n",
-    "            patch['height'],\n",
-    "            fill=False,color='r',linewidth=2)\n",
+    "                (patch['c'], patch['r']),\n",
+    "                patch['width'],\n",
+    "                patch['height'],\n",
+    "                fill=False,\n",
+    "                color='r',\n",
+    "                linewidth=2\n",
+    "            )\n",
     "        )\n",
     "plt.show()"
    ]
@@ -938,16 +935,10 @@
     "## Real-world applications\n",
     "\n",
     "Applications\n",
-    "\n",
-    "Turning to grayscale before detecting\n",
-    "\n",
-    "edges/corners\n",
-    "\n",
-    "Reducing noise and restoring images\n",
-    "\n",
-    "Blurring faces detected\n",
-    "\n",
-    "Approximation of objects' sizes"
+    "* Turning to grayscale before detecting edges/corners\n",
+    "* Reducing noise and restoring images\n",
+    "* Blurring faces detected\n",
+    "* Approximation of objects' sizes"
    ]
   },
   {
@@ -964,13 +955,13 @@
     "\n",
     "# Privacy protection\n",
     "# Detect the faces\n",
-    "detected = detector.detect_multi_scale(img=image,\n",
-    "scale_factor=1.2, step_ratio=1,\n",
-    "min_size=(50, 50), max_size=(100, 100))\n",
+    "detected = detector.detect_multi_scale(\n",
+    "    img=image, scale_factor=1.2, step_ratio=1, min_size=(50, 50), max_size=(100, 100)\n",
+    ")\n",
     "# For each detected face\n",
     "for d in detected:\n",
-    "# Obtain the face cropped from detected coordinates\n",
-    "face = getFace(d)\n",
+    "    # Obtain the face cropped from detected coordinates\n",
+    "    face = getFace(d)\n",
     "\n",
     "# Privacy protection\n",
     "def getFace(d):\n",
@@ -1011,17 +1002,47 @@
     "    resulting_image = mergeBlurryFace(image, gaussian_face)\n",
     "\n",
     "# Privacy protection\n",
+    "# NOTE (JS): `d` is used in the following, so this function signature probably needs to be improved\n",
     "def mergeBlurryFace(original, gaussian_image):\n",
     "    # X and Y starting points of the face rectangle\n",
     "    x, y = d['r'], d['c']\n",
     "\n",
-    "    # TODO (JS): The following doesn't look right\n",
     "    # The width and height of the face rectangle\n",
-    "    width, height = d['r'] + d['width'], \n",
-    "    original[ x:width, y:height] = d['c'] + d['height']\n",
-    "    \n",
-    "    gaussian_image\n",
+    "    width, height = d['r'] + d['width'],  d['c'] + d['height']\n",
+    "    original[x:width, y:height] = gaussian_image\n",
     "    return original"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7853e474-8ba4-47cc-89f4-1f74b44e94e2",
+   "metadata": {},
+   "source": [
+    "### Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6926ec89-72a5-4ee0-9b96-0c840bc03f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the necessary modules\n",
+    "from skimage.restoration import denoise_tv_chambolle, inpaint\n",
+    "from skimage import transform\n",
+    "\n",
+    "# Transform the image so it's not rotated\n",
+    "upright_img = rotate(damaged_image, 20)\n",
+    "\n",
+    "# Remove noise from the image, using the chambolle method\n",
+    "upright_img_without_noise = denoise_tv_chambolle(upright_img,weight=0.1, multichannel=True)\n",
+    "\n",
+    "# Reconstruct the image missing parts\n",
+    "mask = get_mask(upright_img)\n",
+    "result = inpaint.inpaint_biharmonic(upright_img_without_noise, mask, multichannel=True)\n",
+    "\n",
+    "show_image(result)"
    ]
   }
  ],
