--- a/notebooks/python/IntermediateDeepLearningWithPytorch.ipynb
+++ b/notebooks/python/IntermediateDeepLearningWithPytorch.ipynb
@@ -944,7 +944,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "dcfb33bc-2ab0-4c60-8770-73ba47f383fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "507dccf9-2c56-499c-9f3b-01907262bbfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "train_data = pd.read_csv(\"./data/electricity_consump/electricity_train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "fe5e9a87-9a21-4788-9a17-b684170d462b",
    "metadata": {},
    "outputs": [],
@@ -961,31 +982,158 @@
     "        y = df.iloc[i+seq_length, 1]\n",
     "        xs.append(x)\n",
     "        ys.append(y)\n",
-    "\n",
-    "Take data and sequence length as inputs\n",
-    "Initialize inputs and targets lists\n",
-    "Iterate over data points\n",
-    "Define inputs and target\n",
-    "Append to pre-initialized lists\n",
-    "Return inputs and targets as NumPy arrays\n",
-    "\n",
-    "return np.array(xs), np.array(ys)"
+    "    return np.array(xs), np.array(ys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "d1770396-b55d-4ba0-ae6f-39a5aa1faf1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>consumption</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-01-01 00:15:00</td>\n",
+       "      <td>-0.704319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-01-01 00:30:00</td>\n",
+       "      <td>-0.704319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-01-01 00:45:00</td>\n",
+       "      <td>-0.678983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01 01:00:00</td>\n",
+       "      <td>-0.653647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-01-01 01:15:00</td>\n",
+       "      <td>-0.704319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105210</th>\n",
+       "      <td>2013-12-31 22:45:00</td>\n",
+       "      <td>-0.932595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105211</th>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "      <td>-0.907259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105212</th>\n",
+       "      <td>2013-12-31 23:15:00</td>\n",
+       "      <td>-0.932595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105213</th>\n",
+       "      <td>2013-12-31 23:30:00</td>\n",
+       "      <td>-0.932595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105214</th>\n",
+       "      <td>2013-12-31 23:45:00</td>\n",
+       "      <td>-0.932595</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>105215 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  timestamp  consumption\n",
+       "0       2011-01-01 00:15:00    -0.704319\n",
+       "1       2011-01-01 00:30:00    -0.704319\n",
+       "2       2011-01-01 00:45:00    -0.678983\n",
+       "3       2011-01-01 01:00:00    -0.653647\n",
+       "4       2011-01-01 01:15:00    -0.704319\n",
+       "...                     ...          ...\n",
+       "105210  2013-12-31 22:45:00    -0.932595\n",
+       "105211  2013-12-31 23:00:00    -0.907259\n",
+       "105212  2013-12-31 23:15:00    -0.932595\n",
+       "105213  2013-12-31 23:30:00    -0.932595\n",
+       "105214  2013-12-31 23:45:00    -0.932595\n",
+       "\n",
+       "[105215 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "78959242-b0fe-4035-9e5f-9f33f08e4140",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(105119, 96) (105119,)\n"
+     ]
+    }
+   ],
    "source": [
     "# TensorDataset\n",
     "# Create training examples\n",
+    "seq_length = 96\n",
     "X_train, y_train = create_sequences(train_data, seq_length)\n",
     "print(X_train.shape, y_train.shape)\n",
     "\n",
-    "# (34944, 96) (34944,)\n",
-    "\n",
+    "# (34944, 96) (34944,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "917c278e-6959-41dc-9aa4-be5b0641d4ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Convert them to a Torch Dataset\n",
     "from torch.utils.data import TensorDataset\n",
     "dataset_train = TensorDataset(\n",
@@ -1005,85 +1153,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990a416e-e890-429b-8900-a515691741cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Recurrent neuron\n",
-    "Feed-forward networks\n",
-    "RNNs: have connections pointing back\n",
-    "Recurrent neuron:\n",
-    "Input x\n",
-    "Output y\n",
-    "Hidden state h\n",
-    "In PyTorch: nn.RNN()\n",
-    "\n",
-    "Unrolling recurrent neuron through time\n",
-    "\n",
-    "Unrolling recurrent neuron through time\n",
-    "\n",
-    "Unrolling recurrent neuron through time\n",
-    "\n",
-    "Deep RNNs\n",
-    "\n",
-    "Sequence-to-sequence architecture\n",
-    "Pass sequence as input, use the entire output sequence\n",
-    "Example: Real-time speech recognition\n",
-    "\n",
-    "INTERMEDIATE DEEP LEARNING WITH PYTORCH\n",
-    "\n",
-    "Sequence-to-vector architecture\n",
-    "Pass sequence as input, use only the last output\n",
-    "Example: Text topic classification\n",
-    "\n",
-    "INTERMEDIATE DEEP LEARNING WITH PYTORCH\n",
-    "\n",
-    "Vector-to-sequence architecture\n",
-    "Pass single input, use the entire output sequence\n",
-    "Example: Text generation\n",
-    "\n",
-    "INTERMEDIATE DEEP LEARNING WITH PYTORCH\n",
-    "\n",
-    "Encoder-decoder architecture\n",
-    "Pass entire input sequence, only then start using output sequence\n",
-    "Example: Machine translation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "dc7e6e7f-176f-4295-ba40-9dc60dd9f37a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RNN in PyTorch\n",
+    "# RNN in PyTorch\n",
     "class Net(nn.Module):\n",
-    "def __init__(self):\n",
-    "super().__init__()\n",
-    "self.rnn = nn.RNN(\n",
-    "input_size=1,\n",
-    "hidden_size=32,\n",
-    "num_layers=2,\n",
-    "batch_first=True,\n",
-    ")\n",
-    "self.fc = nn.Linear(32, 1)\n",
-    "def forward(self, x):\n",
-    "h0 = torch.zeros(2, x.size(0), 32)\n",
-    "\n",
-    "Define model class with __init__ method\n",
-    "Define recurrent layer, self.rnn\n",
-    "Define linear layer, fc\n",
-    "In forward() , initialize first hidden state to\n",
-    "zeros\n",
-    "Pass input and first hidden state through\n",
-    "RNN layer\n",
-    "Select last RNN's output and pass it\n",
-    "through linear layer\n",
-    "\n",
-    "out, _ = self.rnn(x, h0)\n",
-    "out = self.fc(out[:, -1, :])\n",
-    "return out\n",
-    "\n"
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.rnn = nn.RNN(\n",
+    "            input_size=1,\n",
+    "            hidden_size=32,\n",
+    "            num_layers=2,\n",
+    "            batch_first=True,\n",
+    "        )\n",
+    "        self.fc = nn.Linear(32, 1)\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(2, x.size(0), 32)\n",
+    "        out, _ = self.rnn(x, h0)\n",
+    "        out = self.fc(out[:, -1, :])\n",
+    "        return out"
    ]
   },
   {
